--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <span class="server"></span>
           <span class="server"></span>
         </div>          
-        <h1>Testing performing maintenance.</h1>
+        <h1>Currently performing maintenance.</h1>
     </div>
 </body>
 </html>
