--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello - Chris Burton</title>  
+    <title>Maintenance - Chris Burton</title>  
     <style>
         @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300);
         html {font-size: 18px;}
