--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Maintenance - Chris Burton</title>  
+    <title>Maintenance - Chris Burton</title>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300">  
     <style>
-        @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300);
         html {font-size: 18px;}
         body {font-family: 'Source Sans Pro', sans-serif;line-height: 1.6;font-size: 1em;padding: 0 20px;}
         #wrapper {width: 100%;height: 350px;margin: 0 auto;position: absolute;top: 50%;left: 50%;margin-top: -175px;margin-left: -50%;}
@@ -25,13 +25,6 @@
         @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {html {font-size: 12px;}}
         @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {html {font-size: 14px;}}
     </style>
-    <script>
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-        ga('create', 'UA-36412436-1', 'auto');
-        ga('require', 'displayfeatures');
-        ga('send', 'pageview');
-    </script>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
 </head>
 <body>
     <div id="wrapper">
@@ -44,5 +37,12 @@
         </div>          
         <h1>Currently performing maintenance.</h1>
     </div>
+    <script>
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        ga('create', 'UA-36412436-1', 'auto');
+        ga('require', 'displayfeatures');
+        ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
 </body>
 </html>
